# ParticleSimulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  imgui.ini  run.bat
Scripts/: build.bat  run.bat
Theme/: colors.cpp  colors.h  style.cpp
lib/imgui/: imconfig.h
src/: App.cpp  App.h  main.cpp
src/Panels/ConfigPanel/: ConfigPanel.cpp  ConfigPanel.h
src/Panels/ParticleCreationPanel/: ParticleCreationPanel.cpp  ParticleCreationPanel.h
src/Panels/SimulationControlPanel/: SimulationControlPanel.cpp  SimulationControlPanel.h
src/Panels/StatsPanel/: StatsPanel.cpp  StatsPanel.h
src/Simulation/: Particle.cpp  Particle.h  SimulationParams.h  Solver.cpp  Solver.h
src/Simulation/Math/: vec.cpp  vec.h
